--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,155 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{sollberger2020seismological,
+  title={Seismological processing of six degree-of-freedom ground-motion data},
+  author={Sollberger, David and Igel, Heiner and Schmelzbach, Cedric and Edme, Pascal and Van Manen, Dirk-Jan and Bernauer, Felix and Yuan, Shihao and Wassermann, Joachim and Schreiber, Ulrich and Robertsson, Johan OA},
+  journal={Sensors},
+  volume={20},
+  number={23},
+  pages={6904},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{igel2021romy,
+  title={ROMY: a multicomponent ring laser for geodesy and geophysics},
+  author={Igel, Heiner and Schreiber, Karl Ulrich and Gebauer, Andr{\'e} and Bernauer, Felix and Egdorf, Sven and Simonelli, Andrea and Lin, Chin-Jen and Wassermann, Joachim and Donner, Stefanie and Hadziioannou, C{\'e}line and others},
+  journal={Geophysical Journal International},
+  volume={225},
+  number={1},
+  pages={684--698},
+  year={2021},
+  publisher={Oxford University Press (OUP)}
+}
+
+@article{yuan2020six,
+  title={Six degree-of-freedom broadband ground-motion observations with portable sensors: Validation, local earthquakes, and signal processing},
+  author={Yuan, Shihao and Simonelli, Andreino and Lin, Chin-Jen and Bernauer, Felix and Donner, Stefanie and Braun, Thomas and Wassermann, Joachim and Igel, Heiner},
+  journal={Bulletin of the Seismological Society of America},
+  volume={110},
+  number={3},
+  pages={953--969},
+  year={2020},
+  publisher={Seismological Society of America}
+}
+
+@article{yuan2015investigation,
+  title={Investigation on crustal and upper mantle discontinuities in western part of North China Craton using P wave receiver functions},
+  author={Yuan, Shihao and Chen, Yongshun},
+  journal={Progress in Geophysics},
+  volume={30},
+  number={6},
+  pages={2589--2595},
+  year={2015},
+  publisher={Progress in Geophysics}
+}
+
+@article{yuan2021high,
+  title={High-frequency localized elastic full-waveform inversion for time-lapse seismic surveys},
+  author={Yuan, Shihao and Fuji, Nobuaki and Singh, Satish C},
+  journal={Geophysics},
+  volume={86},
+  number={3},
+  pages={R277--R292},
+  year={2021},
+  publisher={GeoScienceWorld}
+}
+
+@article{yuan2021seismic,
+  title={Seismic source tracking with six degree-of-freedom ground motion observations},
+  author={Yuan, Shihao and Gessele, Kilian and Gabriel, Alice-Agnes and May, Dave A and Wassermann, Joachim and Igel, Heiner},
+  journal={Journal of Geophysical Research: Solid Earth},
+  pages={e2020JB021112},
+  year={2021}
+}
+
+@article{noe2022anisotropic,
+  title={Anisotropic elastic parameter estimation from multicomponent ground-motion observations: a theoretical study},
+  author={Noe, Sebastian and Yuan, Shihao and Montagner, Jean-Paul and Igel, Heiner},
+  journal={Geophysical Journal International},
+  volume={229},
+  number={2},
+  pages={1462--1473},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+@article{edme2016local,
+  title={Local dispersion curve estimation from seismic ambient noise using spatial gradients},
+  author={Edme, Pascal and Yuan, Shihao},
+  journal={Interpretation},
+  volume={4},
+  number={3},
+  pages={SJ17--SJ27},
+  year={2016},
+  publisher={Society of Exploration Geophysicists and American Association of Petroleum~…}
+}
+
+@article{chambers2024dascore,
+  title={DASCore: A Python library for distributed fiber optic sensing},
+  author={Chambers, Derrick and Jin, Ge and Tourei, Ahmad and Issah, Abdul Hafiz Saeed and Lellouch, Ariel and Martin, Eileen R and Zhu, Donglin and Girard, Aaron J and Yuan, Shihao and Cullison, Thomas and others},
+  journal={Seismica},
+  volume={3},
+  number={2},
+  pages={10--26443},
+  year={2024}
+}
+
+@article{yang20112,
+  title={2-D p-wave velocity structure in the Xinfengjiang reservoir area——Results of Yingde—Heyuan—Luhe deep seismic sounding profile},
+  author={YANG, Zhuo-xin and LIU, Bao-feng and WANG, Qin-cai and WANG, Hong-ti and YUAN, Shi-hao},
+  journal={Progress in geophysics},
+  volume={26},
+  number={6},
+  pages={1968--1975},
+  year={2011},
+  publisher={Progress in Geophysics}
+}
+
+@inproceedings{taddei2024seismic,
+  title={Seismic soil-structure interaction analysis considering a layered half space subjected to geothermal induced seismicity},
+  author={Taddei, Francesca and Yuan, Shihao and Freisinger, Julian and M{\"u}ller, Gerhard},
+  booktitle={Journal of Physics: Conference Series},
+  volume={2647},
+  number={8},
+  pages={082020},
+  year={2024},
+  organization={IOP Publishing}
+}
+
+@article{yuan2024single,
+  title={Single-station vehicle tracking using six-component seismic measurements: A comparative study with array-based methods},
+  author={Yuan, Shihao and Bernauer, Felix and Wassermann, Joachim and Martin, Eileen and Igel, Heiner},
+  year={2024},
+  publisher={EarthArXiv}
+}
+
+@article{yuan2024bridge,
+  title={Bridge monitoring using six-component ground motion measurements},
+  author={Yuan, Shihao and Bernauer, Felix and Liao, Chun-Man and Niederleithinger, Ernst and Martin, Eileen and Hadziioannou, C{\'e}line and Wassermann, Joachim and Igel, Heiner},
+  year={2024},
+  publisher={Engineering Archive}
+}
+
+@article{yuan2017localized,
+  title={Localized time-lapse elastic waveform inversion using wavefield injection and extrapolation: 2-D parametric studies},
+  author={Yuan, Shihao and Fuji, Nobuaki and Singh, Satish and Borisov, Dmitry},
+  journal={Geophysical Journal International},
+  volume={209},
+  number={3},
+  pages={1699--1717},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@techreport{sun2024distributed,
+  title={Distributed Fiber Optic Electromagnetic Sensing for Subsurface Monitoring of Carbon Storage Sites},
+  author={Sun, Haishan and Homa, Daniel S and Martin, Eileen and Yuan, Shihao and Dejneka, Zach and Pickrell, Gary and Wang, Anbo},
+  year={2024},
+  institution={Sentek Instrument LLC}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
